[package]
name = "one_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
teloxide = { version = "0.12.2", features = ["full"] }
tokio = { version =  "1.31.0", features = ["rt-multi-thread", "macros"] }
